// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster Actions Dropdown Items admin console url does not exist should render (no console) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    title="Launch Console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
    title="Edit Display Name"
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editconsoleurl"
    onClick={[Function]}
    title="Add Console URL"
  >
    Add Console URL
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state not ready should render (not ready) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    title="Launch Console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
    title="Edit Display Name"
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    title="Scale Cluster"
    tooltip={
      <span>
        This cluster is not ready
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.deletecluster"
    onClick={[Function]}
    title="Delete Cluster"
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state ready and console url should render 1`] = `
<Fragment>
  <DropdownItem
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Launch Console"
  >
    Launch Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit Display Name"
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editcluster"
    onClick={[Function]}
    title="Scale Cluster"
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.deletecluster"
    onClick={[Function]}
    title="Delete Cluster"
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state uninstalling should render (uninstalling) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    title="Launch Console"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Launch Console
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editdisplayname"
    title="Edit Display Name"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    title="Scale Cluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.deletecluster"
    title="Delete Cluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items read only cluster should render correctly 1`] = `
<Fragment>
  <DropdownItem
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Launch Console"
  >
    Launch Console
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items self managed cluster should render (self managed) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    title="Launch Console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
    title="Edit Display Name"
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editconsoleurl"
    onClick={[Function]}
    title="Add Console URL"
  >
    Add Console URL
  </DropdownItem>
</Fragment>
`;
